--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url= jdbc:mysql://localhost:3306/todocrud?useSSL=false
+spring.datasource.url= jdbc:mysql://localhost:3306/personascrud?useSSL=false
 spring.datasource.username= root
-spring.datasource.password= 2jcJxMh2tyAe(xwq
+spring.datasource.password= 
 spring.jpa.hibernate.ddl-auto = update
